--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AIFred",
+  "name": "aifred",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@tanstack/react-query": "^5.55.1",
+    "axios": "^1.7.7",
+    "lottie-react-native": "^6.7.2",
+    "nativewind": "^4.0.1",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-hook-form": "^7.53.0",
+    "react-native": "0.75.2",
+    "react-native-gifted-chat": "^2.6.2",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.75.2",
@@ -24,10 +42,12 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "5.0.4"
   },
   "engines": {
