--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "0.75.2",
     "react-native-gifted-chat": "^2.6.2",
     "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "tailwind-merge": "^2.5.2",
